# lib_xdma

./: CMakeLists.txt  Communicator.cu  Communicator.cuh  Makefile  README.md  XDMA.cpp  XDMA.h  XDMACollective.cpp  XDMACollective.h  XDMAController.cpp  XDMAController.h  test.cpp
